--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,340 +1,4 @@
-@font-face {
-	font-family: 'Collegiate';
-	src: url('../fonts/CollegiateBlackFLF.ttf');
-}
-
-
-/* style.css
- * This file provides css styles.
- */
-
 body,
 html {
-	background-color: #292D2E;
-	background-image: url(../images/black-orchid.png);
-	width: 100%;
-	height: 100%;
-	margin: 0 auto;
-	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
-	color: #E0E0E0;
-	overflow: hidden;
-}
-
-h1 {
-	font-family: 'Collegiate';
-	text-shadow: -2px 0 3px black, 0 2px 3px black, 2px 0 3px black, 0 -2px 3px black;
-}
-
-h2 {
-	border-bottom: 1px solid #A5A5A5;
-	font-size: 1.3em;
-	padding-bottom: 3px;
-	color: #BEBCBC;
-	margin-top: 10px;
-}
-
-a {
-	text-decoration: none;
-	color: #00aed1;
-}
-
-a:hover {
-	text-decoration: underline;
-}
-
-.frame {
-	height: 100%;
-	overflow: scroll;
-}
-
-.h1-qdg {
-	text-align: center;
-	font-weight: bold;
-	font-size: 2.6em;
-	letter-spacing: 1px;
-	margin-top: 0.7em;
-	margin-bottom: 0.5em;
-	color: white;
-}
-
-.no-padding {
-	padding: 0px !important;
-}
-
-.load-more {
-	text-align: right;
-	margin-top: 5px;
-	margin-bottom: 10px;
-	font-style: italic;
-	font-family: HelvNeueLightForIBM;
-	font-size: 10pt;
-	cursor: pointer;
-}
-
-.load-more:hover {
-	color: grey;
-}
-
-.navbar-toggle {
-	border: 1px solid white;
-	float: none;
-	margin: 0px;
-}
-
-.navbar-toggle:hover {
-	background-color: grey;
-}
-
-.navbar-toggle .icon-bar {
-	background-color: white;
-}
-
-.qdg-logo {
-	width: 100%;
-}
-
-.team-logo {
-	width: 100%;
-	margin-bottom: 30px;
-	width: 32px;
-	height: 32px;
-	background-size: 100%;
-	margin: 12px auto;
-	display: inline-block;
-	vertical-align: middle;
-}
-
-.logo-barbarians {
-	background-image: url('../images/barbarians.png');
-}
-
-.logo-hatters {
-	background-image: url('../images/hatters.png');
-}
-
-.logo-mavericks {
-	background-image: url('../images/mavericks.png');
-}
-
-.logo-titans {
-	background-image: url('../images/titans.png');
-}
-
-.logo-default {
-	background-image: url('../images/qdg-logo.png');
-}
-
-.leagueTable {
-	font-size: 1.3em;
-	width: 100%;
-	margin-bottom: 10px;
-}
-
-.leagueTable thead tr {
-	background-color: black;
-	font-size: 0.8em;
-	color: #ccc;
-}
-
-.leagueTable tr {
-	background-color: #1E1E1E;
-	border: 1px solid #3A3A3A;
-}
-
-.leagueTable tr td.team-name {
-	text-align: left;
-	width: 70%;
-}
-
-.leagueTable tr td {
-	text-align: center;
-	padding: 0px 15px;
-}
-
-.fixtures {
-	width: 100%;
-	margin-top: 15px;
-	font-size: 1.1em;
-}
-
-.fixtures .fixture {
-	border: 1px solid #3A3A3A;
-	background-color: #1E1E1E;
-	margin-top: 4px;
-	padding: 10px 8px;
-	font-size: 1.1em;
-}
-
-.fixtures .fixture--linked:hover {
-	background-color: black;
-	cursor: pointer;
-}
-
-.fixtures .fixture > div {
-	display: inline-block;
-}
-
-.fixtures .fixture .fixture-info {
-	color: #929090;
-	padding: 8px 10px;
-	padding-right: 0px;
-	text-align: center;
-}
-
-.fixtures .fixture .fixture-info span {
-	vertical-align: middle;
-}
-
-.fixtures .fixture .fixture-info img {
-	width: 24px;
-	height: 24px;
-	margin: 0px 10px;
-}
-
-.fixtures .fixture .team-logo {
-	margin: 0px 10px;
-	vertical-align: middle;
-}
-
-.tiles .competition-container:first-child {
-	padding-left: 0px;
-	padding-right: 2px;
-}
-
-.tiles .competition-container:last-child {
-	padding-left: 2px;
-	padding-right: 0px;
-}
-
-.competitions {
-	height: 100%;
-	background-color: #0E0E0E;
-	box-shadow: -5px 0px 5px #131212;
-}
-
-.competition-container {
-	opacity: 0.5;
-	padding: 2px 2px;
-	display: inline-block;
-	float: none;
-}
-
-.competition-active {
-	opacity: 1.0;
-}
-
-.competition {
-	cursor: pointer;
-	background-color: black;
-	float: none;
-	border-radius: 7px;
-	border: 7px solid #DADADA;
-	padding: 10px;
-	width: 100%;
-	position: relative;
-}
-
-.competition:hover {
-	background-color: #292D2E;
-}
-
-.competition-overlay {
-	position: absolute;
-	top: 0px;
-	left: 0px;
-	height: 100%;
-	width: 100%;
-	background-color: rgba(0, 0, 0, 0.7);
-	color: #EAEAEA;
-}
-
-.competition-overlay:hover {
-	background-color: rgba(0, 0, 0, 0.4);
-}
-
-.competition-overlay h3 {
-	width: 100%;
-	text-align: center;
-	position: absolute;
-	top: 50%;
-	margin-top: 0px;
-	margin-bottom: 0px;
-}
-
-.coming-soon {
-	font-size: 60px;
-}
-
-.btn-signup {
-	text-align: center;
-}
-
-.btn-signup button {
-	color: black;
-}
-
-.btn-signup button:hover {
-	background-color: #1E1E1E;
-	color: #D9E0E0;
-	border: 1px solid grey;
-}
-
-
-/* md devices */
-
-@media (max-width: 992px) {
-	.coming-soon {
-		font-size: 50px;
-	}
-	.col-md-nopadding {
-		padding: 0px;
-	}
-}
-
-
-/* bigger than xs devices */
-
-@media (min-width: 768px) {
-	.competitions {
-		border-left: 1px solid #101010;
-	}
-}
-
-
-/* xs devices */
-
-@media (max-width: 768px) {
-	.h1-qdg {
-		text-align: left;
-		font-size: 2.3em;
-	}
-	.coming-soon {
-		font-size: 40px;
-	}
-	.competitions {
-		border-right: 1px solid #101010;
-		box-shadow: 5px 0px 10px #000000;
-	}
-	.col-xs-nopadding {
-		padding: 0px;
-	}
-}
-
-
-/* xxs devices */
-
-@media (max-width: 480px) {
-	.h1-qdg {
-		font-size: 1.6em;
-	}
-	.frame {
-		padding-left: 4px;
-		padding-right: 4px;
-	}
-	.leagueTable {
-		font-size: 1.2em;
-	}
-	.fixtures .fixture .fixture-info {
-		margin-bottom: 10px;
-	}
+	margin: 0;
 }
